[workspace]\nmembers = [\n    ".",\n    "contracts/escrow",\n]\nresolver = "2"\n\n[package]\nname = "soroban-toolkit"\nversion = "0.1.0"\nedition = "2021"\ndescription = "A decentralized escrow platform and Rust utility library for Soroban smart contract developers on Stellar"\nlicense = "MIT"\nrepository = "https://github.com/laugh-tales/soroban-toolkit"\nreadme = "README.md"\nkeywords = ["soroban", "stellar", "blockchain", "escrow", "smart-contracts"]\ncategories = ["cryptography::cryptocurrencies", "development-tools"]\n\n[lib]\nname = "soroban_toolkit"\npath = "src/lib.rs"\n\n[[bin]]\nname = "soroban-toolkit"\npath = "src/main.rs"\n\n[dependencies]\nhex = "0.4"\nsha2 = "0.10"\nbase64 = "0.21"\nserde = { version = "1.0", features = ["derive"] }\nserde_json = "1.0"\nthiserror = "1.0"\nclap = { version = "4.0", features = ["derive"] }\n\n[dev-dependencies]\npretty_assertions = "1.3" # LF line endings
